[project]
name = "dojo-commons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3~=1.37.18",
    "duckdb~=1.2.1",
    "pydantic~=2.10.6",
    "pydantic-settings~=2.8.1",
]

[dependency-groups]
dev = [
    "coverage>=7.8.2",
]
